--- a/app/src/main/res/menu/menu_contact.xml
+++ b/app/src/main/res/menu/menu_contact.xml
@@ -4,8 +4,8 @@
     <item
         android:id="@+id/profileIcon"
         app:showAsAction="ifRoom|withText"
-        android:title="profile"
         android:visible="true"
+        android:icon="@drawable/ic_profile"
         android:orderInCategory="1">
 
     </item>
