--- a/app/src/main/res/layout/fragment_contact_profile.xml
+++ b/app/src/main/res/layout/fragment_contact_profile.xml
@@ -32,6 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Display Name"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:id="@+id/contact_display_name"/>
         <TextView
             android:layout_marginTop="8dp"
@@ -45,6 +47,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:id="@+id/contact_user_email"/>
     </LinearLayout>
 
