--- a/app/src/main/res/layout/contact_fragment.xml
+++ b/app/src/main/res/layout/contact_fragment.xml
@@ -7,14 +7,15 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeContactRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="16dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewAlumni"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:layout_margin="16dp"/>
+        />
     </android.support.v4.widget.SwipeRefreshLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/nextFloatingButton"
