--- a/app/src/main/res/layout/item_alumni.xml
+++ b/app/src/main/res/layout/item_alumni.xml
@@ -48,12 +48,16 @@
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/imageViewFrame"
             android:text="TextView"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
             android:id="@+id/textViewJob"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:layout_below="@+id/textViewName"
             android:layout_toEndOf="@+id/imageViewProfile"
             android:text="TextView"
