--- a/app/src/main/res/layout/fragment_group_info.xml
+++ b/app/src/main/res/layout/fragment_group_info.xml
@@ -70,7 +70,7 @@
     </LinearLayout>
         <View
             android:id="@+id/underline"
-            android:background="#FF000000"
+            android:background="@color/underlineGrey"
             android:layout_height="0.0001dp"
             android:layout_width="fill_parent"
             android:layout_alignParentBottom="true"
