--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="id.technomotion.ui.homepagetab.ProfileActivity">
+    tools:context="com.qiscus.chat.sample.ui.homepagetab.ProfileActivity">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
