--- a/app/src/main/res/layout/fragment_group_info.xml
+++ b/app/src/main/res/layout/fragment_group_info.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="id.technomotion.ui.groupchatcreation.GroupInfoFragment"
+    tools:context="com.qiscus.chat.sample.ui.groupchatcreation.GroupInfoFragment"
     android:background="@color/qiscus_white">
 
     <!-- TODO: Update blank fragment layout -->
