--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,7 +91,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="UserKey"
+                android:text="Password"
                 android:textStyle="bold"/>
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
