--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -6,7 +6,7 @@
 
         android:title="Search"
 
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_search"
 
         app:showAsAction="always|collapseActionView"
 
