--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,6 +41,7 @@
                 android:layout_marginBottom="25dp"
                 android:layout_marginRight="25dp"
                 android:background="@drawable/ic_upload"
+                android:visibility="gone"
                 android:tint="#C4C4C4"/>
         </FrameLayout>
 
