--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <color name="colorPrimary">#2ACB6E</color>
-    <color name="colorPrimaryDark">#28B865</color>
+    <color name="colorPrimary">#FB8B00</color>
+    <color name="colorPrimaryDark">#EB8404</color>
     <color name="colorAccent">#FEDB70</color>
-    <color name="colorSplash">#2ACB6E</color>
+    <color name="colorSplash">#FB8B00</color>
     <color name="orangeIcon">#F2994A</color>
     <color name="emojiSafeYellow">#FFE8A3</color>
     <color name="underlineGrey">#E0E0E0</color>
