--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.qiscus.chat.sample.ui.login.LoginActivity">
+    tools:context="com.qiscus.chat.ngobrel.ui.login.LoginActivity">
 
     <LinearLayout
         android:orientation="vertical"
