--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,6 @@
         <item name="android:fontFamily">@font/metropolismedium</item>
     </style>
 
-    <!-- Base application theme. -->
     <style name="TabTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -25,5 +24,10 @@
         <item name="android:fontFamily">@font/metropolismedium</item>
     </style>
 
+    <style name="AppTheme.NoActionBar" parent="QiscusTheme">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 
 </resources>
