--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,25 +6,16 @@
     tools:context="com.qiscus.chat.ngobrel.ui.login.LoginActivity">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
-            android:layout_weight="5"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <View
+            android:id="@+id/top_view"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                android:background="@color/colorPrimary"
-                android:id="@+id/top_view"
-                >
-            </View>
-
-        </RelativeLayout>
-
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:background="@color/colorPrimary" />
 
         <View
             android:layout_width="match_parent"
@@ -32,25 +23,16 @@
             android:layout_weight="4"
             android:background="@color/colorAccent" />
     </LinearLayout>
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone"
-        android:layout_centerInParent="true"/>
+        android:layout_above="@id/login_form"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_logo_qiscus" />
 
-
-        <ImageView
-            android:layout_above="@id/login_form"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_logo_qiscus"/>
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
@@ -58,8 +40,8 @@
         android:layout_centerInParent="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:padding="16dp"
-        android:background="@color/qiscus_white">
+        android:background="@color/qiscus_white"
+        android:padding="16dp">
 
 
         <LinearLayout
@@ -72,7 +54,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="UserID"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -92,7 +75,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Password"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -102,9 +86,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -115,7 +96,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Display Name"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -125,31 +107,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_displayname"
-                    android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
                     android:maxLines="1"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
-
 
         </LinearLayout>
 
     </ScrollView>
 
     <Button
-        android:layout_below="@id/login_form"
-        android:id="@+id/email_sign_in_button"
+        android:id="@+id/login_button"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/action_sign_in"
-        android:textStyle="bold"
-        android:textColor="@color/qiscus_white"
-        android:backgroundTint="@color/colorPrimary"
+        android:layout_below="@id/login_form"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        />
+        android:layout_marginTop="16dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/action_sign_in"
+        android:textColor="@color/qiscus_white"
+        android:textStyle="bold" />
 </RelativeLayout>
