--- a/app/src/main/res/layout/dialog_stranger_name.xml
+++ b/app/src/main/res/layout/dialog_stranger_name.xml
@@ -1,51 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="18dp"
-    android:padding="32dp"
-    android:layout_height="wrap_content">
+    android:orientation="vertical"
+    android:padding="32dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:text="@string/chat_with_stranger"
-        android:textSize="32sp"
-        android:layout_marginBottom="24dp"/>
+        android:textSize="32sp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stranger_chat_guidance"
         android:layout_marginBottom="32dp"
-        />
+        android:text="@string/stranger_chat_guidance" />
+
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="The stranger's username" />
+        android:hint="The stranger's username"
+        android:inputType="textPersonName" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
-            android:layout_weight="1"
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
+            android:layout_weight="1"
+            android:background="@drawable/qiscus_transparent"
             android:text="Cancel"
-            android:background="@drawable/qiscus_transparent"/>
+            android:textColor="@color/colorPrimaryDark" />
 
         <Button
-            android:layout_weight="1"
             android:id="@+id/confirm_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@drawable/qiscus_transparent"
-            android:textColor="@color/colorPrimary"
-            android:text="Ok" />
+            android:text="Ok"
+            android:textColor="@color/colorPrimary" />
     </LinearLayout>
 </LinearLayout>
