--- a/app/src/main/res/layout/item_room_member.xml
+++ b/app/src/main/res/layout/item_room_member.xml
@@ -9,19 +9,20 @@
         android:id="@+id/imageViewProfile"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginStart="16dp"
         android:src="@drawable/ic_default_avatar" />
 
     <TextView
         android:id="@+id/textViewName"
-        android:layout_width="279dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="18sp" />
-
 
 </LinearLayout>
