--- a/app/src/main/res/layout/activity_add_group_member.xml
+++ b/app/src/main/res/layout/activity_add_group_member.xml
@@ -16,6 +16,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="16dp"
         android:scrollbars="vertical" />
 
 </LinearLayout>
