--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,5 +25,14 @@
         <item name="android:fontFamily">@font/metropolismedium</item>
     </style>
 
+    <style name="AppTheme.NoActionBar" parent="QiscusTheme">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlNormal">@color/qiscus_divider</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
+        <item name="colorControlHighlight">@color/colorAccent</item>
+        <item name="actionModeBackground">@color/colorPrimary</item>
+    </style>
 
 </resources>
